--- a/theme/content/_index.html
+++ b/theme/content/_index.html
@@ -22,40 +22,41 @@ group: getting-started
     </div>
     <div class="o-page__body">
         <p>Um ein responsives Verhalten der Seite zu gewährleisten werden sogenannte Breaakpoints vordefiniert als mögliche Anknüpfpunkte für Verhaltensänderungen im Layout und Design der Seite abhängig vom verfügbaren Bildschirmplatzl.</p>
-
-        <table class="table">
-            <tbody>
-            <tr>
-                <th>Verfügbare Container</th>
-                <td><strong>xs</strong></td>
-                <td><strong>sm</strong></td>
-                <td><strong>md</strong></td>
-                <td><strong>lg</strong></td>
-                <td><strong>xl</strong></td>
-                <td><strong>xxl</strong></td>
-            </tr>
-            <tr>
-                <th>Breakpoint</th>
-                <td>0</td>
-                <td>576px</td>
-                <td>768px</td>
-                <td>992px</td>
-                <td>1200px</td>
-                <td>1400px</td>
-            </tr>
-            <tr>
-                <th>Maximale Inhaltsbreite</th>
-                <td>-</td>
-                <td>540px</td>
-                <td>720px</td>
-                <td>960px</td>
-                <td>1140px</td>
-                <td>1320px</td>
-            </tr>
-            </tbody>
-        </table>
-
+        <div class="o-table__container">
+            <table class="o-table o-table--default">
+                <tbody>
+                <tr>
+                    <th>Verfügbare Container</th>
+                    <td><strong>xs</strong></td>
+                    <td><strong>sm</strong></td>
+                    <td><strong>md</strong></td>
+                    <td><strong>lg</strong></td>
+                    <td><strong>xl</strong></td>
+                    <td><strong>xxl</strong></td>
+                </tr>
+                <tr>
+                    <th>Breakpoint</th>
+                    <td>0</td>
+                    <td>576px</td>
+                    <td>768px</td>
+                    <td>992px</td>
+                    <td>1200px</td>
+                    <td>1400px</td>
+                </tr>
+                <tr>
+                    <th>Maximale Inhaltsbreite</th>
+                    <td>-</td>
+                    <td>540px</td>
+                    <td>720px</td>
+                    <td>960px</td>
+                    <td>1140px</td>
+                    <td>1320px</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
+
 </div>
 <div class="o-page__footer">
     <div class="c-panel c-panel--centered">
